# leetcode-auto-sync

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MAINTAINER_GUIDE.md  PERFORMANCE.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  UPGRADING.md  package.json  pr_body.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: __init__.py  benchmark_sync.py
config/: default_config.json
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  styles.css
scripts/: benchmark.py  doctor.py  install.command  install.ps1  install.sh  package.py  release.py  release_check.py
server/: app.py  config.py  diagnostics.py  git_service.py  metrics.py  repository_scanner.py  repository_writer.py  requirements.txt  retry.py  root_readme.py  schemas.py  submit_service.py
tests/: conftest.py  test_benchmarks.py  test_change_detector.py  test_commit_planner.py  test_config_manager.py  test_documentation_engine.py  test_e2e_pipeline.py  test_file_diff.py  test_folder_layout.py  test_git_config.py  test_git_push_reliability.py  test_git_service.py  test_graphql_client.py  test_metadata_cache.py  test_metadata_integrity.py  test_metadata_service.py  test_metrics.py  test_packaging.py  test_release_script.py  test_repository_state.py  test_repository_writer.py  test_retry.py  test_root_readme.py  test_schema_migration.py  test_snapshot_rollback.py  test_source_integrity.py  test_status_endpoint.py  test_structured_logging.py  (+4 more)
(+67 files in other folders)
